# gha-sandbox

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: tests.yml
backend/api/: Dockerfile  Makefile  README.md  pyproject.toml
backend/api/src/: cli.py
backend/api/src/api/: main.py  settings.py
backend/api/tests/: test_main.py
ui/: Dockerfile
ui/src/: index.html  index.js
